# quantum-mlops-workbench

./: .dockerignore  .editorconfig  .env.example  .pre-commit-config.yaml  ARCHITECTURE.md  AUTONOMOUS_SDLC_FINAL_SUMMARY.md  AUTONOMOUS_SDLC_IMPLEMENTATION_SUMMARY.md  AUTONOMOUS_SDLC_SUMMARY.md  BACKLOG.md  CLI_USAGE.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.production  FINAL_DEPLOYMENT_GUIDE.md  MONITORING_ENHANCEMENT_SUMMARY.md  Makefile  Makefile.dependencies  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_CHARTER.md  QUANTUM_ADVANTAGE_BREAKTHROUGH.md  QUANTUM_BACKENDS.md  QUANTUM_META_LEARNING_BREAKTHROUGH_SUMMARY.md  README.md  SDLC_ENHANCEMENTS_SUMMARY.md  SECURITY.md  TERRAGON_AUTONOMOUS_SDLC_FINAL_SUMMARY.md  TERRAGON_AUTONOMOUS_SDLC_IMPLEMENTATION_COMPLETE.md  TERRAGON_AUTONOMOUS_SDLC_v4_FINAL_SUMMARY.md  TERRAGON_GENERATION4_AUTONOMOUS_SDLC_FINAL_SUMMARY.md  advanced_quantum_validation_framework.py  autonomous_demo_simplified.py  autonomous_execution_error.json  autonomous_gen1_simple_results.json  autonomous_quantum_demo_v4.py  autonomous_quantum_demo_v4_simple.py  autonomous_quantum_sdlc_execution.py  autonomous_quantum_sdlc_v4_1756303423.json  autonomous_quantum_sdlc_v4_1756303438.json  autonomous_quantum_sdlc_v4_1756303461.json  (+123 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows-templates/: README.md  performance-benchmarking.yml  quantum-ml-ci.yml  release-automation.yml  security-scanning.yml
.terragon/: autonomous-discovery.py  continuous-executor.py  execution-history.json  simple-discovery.py  value-config.yaml  value-metrics.json
checkpoints/: qml_model_1755172359311_a87ff6_epoch_0.json  qml_model_1755172359311_a87ff6_epoch_10.json  qml_model_1755172360943_a87ff6_epoch_0.json  qml_model_1755172718275_a87ff6_epoch_0.json  qml_model_1755172718275_a87ff6_epoch_10.json  qml_model_1755172718275_a87ff6_epoch_20.json  qml_model_1755172720202_a87ff6_epoch_0.json  qml_model_1755264732386_a87ff6_epoch_0.json  qml_model_1755264732386_a87ff6_epoch_10.json  qml_model_1755264732386_a87ff6_epoch_20.json  qml_model_1755264732386_a87ff6_epoch_30.json  qml_model_1755264735030_a87ff6_epoch_0.json
deployment/: 01-namespace.yaml  02-configmap.yaml  03-secrets.yaml  04-deployment.yaml  05-service.yaml  06-ingress.yaml  07-pvc.yaml  Dockerfile  alert-rules.yml  api.py  build.sh  deploy.sh  grafana-dashboard.json  health-check.sh  prometheus.yml  requirements.txt  rollback.sh
docs/: QUANTUM_ADVANTAGE_RESEARCH.md  ROADMAP.md
docs/adr/: 001-quantum-backend-abstraction.md  002-mlops-integration-strategy.md  003-testing-framework-design.md  README.md  template.md
docs/observability/: README.md  mlops-integration.md
docs/security/: README.md  container-security.md  quantum-cloud-security.md  sbom-configuration.md  vulnerability-management.md
docs/workflows/: README.md
examples/: integration_example.py  quantum_advantage_analysis_demo.py  quantum_backend_demo.py  quantum_monitoring_demo.py  testing_framework_example.py
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  production-deployment.yaml  secrets.yaml  service.yaml
monitoring/: prometheus.yml  quantum_mlops_rules.yml
quantum_gen1_env/: pyvenv.cfg
quantum_gen4_env/: pyvenv.cfg
quantum_meta_learning_breakthrough_results/: breakthrough_results_1756086507.json  breakthrough_results_1756086518.json  breakthrough_results_1756086526.json
quantum_monitoring/: alerts_20250808.jsonl  summary_run_1754622924.json  summary_run_1754622949.json  summary_run_1754623073.json  summary_run_1754623081.json
quantum_research_env/: pyvenv.cfg
quantum_sdlc_env/: pyvenv.cfg
src/quantum_mlops/: __init__.py  advanced_caching.py  advanced_research_integration.py  algorithms.py  api.py  autonomous_executor.py  benchmarking.py  circuit_validation.py  cli.py  compilation.py  core.py  deployment.py  error_correction.py  exceptions.py  global_compliance.py  global_deployment_engine.py  health.py  high_performance_compilation.py  hyperopt.py  i18n.py  monitoring.py  (+12 more)
terraform/: main.tf  outputs.tf  variables.tf
tests/: README.md  conftest.py
(+54 files in other folders)
